@@ -1,3 +1,8 @@
+2008-09-26  Christian Faulhammer  <opfer@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-make-keywords-list): \< \> around
+	a regexp can be obtained via paren option of regexp-opt
+
 2008-09-10  Ulrich Mueller  <ulm@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-deprecated):
